--- a/src/demo-app/toast/toast-demo.html
+++ b/src/demo-app/toast/toast-demo.html
@@ -1,4 +1,4 @@
-<h1>SnackBar demo!</h1>
+<h1>Toast demo</h1>
 <div>
   <div>
     Message: <md-input-container><input mdInput type="text" [(ngModel)]="message"></md-input-container>
